AUTOMAKE_OPTIONS = gnu

EXTRA_DIST = \
	zmschema.sql.z \
	zmalter-0.0.1.sql \
	zmalter-0.9.7.sql \
	zmalter-0.9.8.sql \
	zmalter-0.9.9.sql \
	zmalter-0.9.10.sql \
	zmalter-0.9.11.sql \
	zmalter-0.9.12.sql \
	zmalter-0.9.13.sql \
	zmalter-0.9.15.sql \
	zmalter-0.9.16.sql \
	zmalter-1.17.1.sql \
	zmalter-1.17.2.sql \
	zmalter-1.18.0.sql \
	zmalter-1.18.1.sql \
	zmalter-1.19.0.sql \
	zmalter-1.19.1.sql \
	zmalter-1.19.2.sql \
	zmalter-1.19.3.sql \
	zmalter-1.19.4.sql \
	zmalter-1.19.5.sql \
	zmalter-1.20.0.sql \
	zmalter-1.20.1.sql \
	zmalter-1.21.0.sql \
	zmalter-1.21.1.sql \
	zmalter-1.21.2.sql \
	zmalter-1.21.3.sql
