AUTOMAKE_OPTIONS = gnu

EXTRA_DIST = \
	zm_create.sql.in \
	zm_update-0.0.1.sql \
	zm_update-0.9.7.sql \
	zm_update-0.9.8.sql \
	zm_update-0.9.9.sql \
	zm_update-0.9.10.sql \
	zm_update-0.9.11.sql \
	zm_update-0.9.12.sql \
	zm_update-0.9.13.sql \
	zm_update-0.9.15.sql \
	zm_update-0.9.16.sql \
	zm_update-1.17.1.sql \
	zm_update-1.17.2.sql \
	zm_update-1.18.0.sql \
	zm_update-1.18.1.sql \
	zm_update-1.19.0.sql \
	zm_update-1.19.1.sql \
	zm_update-1.19.2.sql \
	zm_update-1.19.3.sql \
	zm_update-1.19.4.sql \
	zm_update-1.19.5.sql \
	zm_update-1.20.0.sql \
	zm_update-1.20.1.sql \
	zm_update-1.21.0.sql \
	zm_update-1.21.1.sql \
	zm_update-1.21.2.sql \
	zm_update-1.21.3.sql \
	zm_update-1.21.4.sql \
	zm_update-1.22.0.sql \
	zm_update-1.22.1.sql \
	zm_update-1.22.2.sql \
	zm_update-1.22.3.sql \
	zm_update-1.23.0.sql \
	zm_update-1.23.1.sql \
	zm_update-1.23.2.sql \
	zm_update-1.23.3.sql \
	zm_update-1.24.0.sql \
	zm_update-1.24.1.sql
