# Only build vendored jwt-cpp if not using system-installed version
if(NOT HAVE_SYSTEM_JWT_CPP)
  add_subdirectory(jwt-cpp)
endif()
add_subdirectory(libbcrypt)
add_subdirectory(RtspServer)
add_subdirectory(span-lite)
set(ENABLE_INSTALL_SAVED "${ENABLE_INSTALL}")
set(ENABLE_INSTALL OFF)
add_subdirectory(CxxUrl)
set(ENABLE_INSTALL "${ENABLE_INSTALL_SAVED}")
