# Only build vendored jwt-cpp if not using system-installed version
if(NOT HAVE_SYSTEM_JWT_CPP)
  add_subdirectory(jwt-cpp)
endif()
add_subdirectory(libbcrypt)
add_subdirectory(RtspServer)
add_subdirectory(span-lite)
set(ENABLE_INSTALL_SAVED "${ENABLE_INSTALL}")
set(ENABLE_INSTALL OFF)
set(CMAKE_POLICY_DEFAULT_CMP0077 NEW)
add_subdirectory(CxxUrl)
unset(CMAKE_POLICY_DEFAULT_CMP0077)
set(ENABLE_INSTALL "${ENABLE_INSTALL_SAVED}")
